Fixed posts issue, changed panel header color to be more visible.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -7,6 +7,10 @@
   max-width: 62.5rem;
 }
 
+.panel h1, .panel h2, .panel h3, .panel h4, .panel h5, .panel h6 {
+color: #a4cfbe !important;
+}
+
 p img {
  display: block; 
  margin-left: auto; 
